--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   sqflite: ^2.3.3+1
   path: ^1.9.0
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
