--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   sqflite: ^2.3.3+1
   path: ^1.9.0
   flutter_bloc: ^8.1.6
+  image_picker: ^1.1.2
+  shared_preferences: ^2.3.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
